--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,124 +1,6 @@
 @import "./common";
-
-
-
-
-$green: #59B210 ;
-$blue: #3498db ;
-$red: #e74c3c;
-$orange: #F27A24;
-$navy: #34495E;
-$darkgreen: #21b68e;
-$navtext: #5D5D5D;
-$black: #3D3D3D;
-$textblue: #0E53A5;
-$bordergray: #e0e0e0;
-$gray: #F9F9F9;
-$white : #fff;
-$darkgray: #dddada;
-$perablack: #777 ;
-$bluegray: #4F6276;
-
-
-
-/* =========== common css ======= */
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
-
-ul,
-ol {
-    list-style-type: none;
-    padding: 0 !important;
-    margin-bottom: 0 !important;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    line-height: 0.8;
-}
-a{
-    text-decoration: none;
-}
-
-
-// --------dropdown-------------
-.dropdown_main{
-    &:hover .dropdown{
-        opacity: 1;
-        visibility: visible;
-        top: 25px;
-    }
-}
-
-.dropdown{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    background-color: $white;
-    padding: 10px 3px !important;
-    border-top: 1px solid $green !important;
-    top: 0px;
-    visibility: hidden;
-    opacity: 0;
-    left: 0px;
-    transition: all linear 0.2s;
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    border: 1px solid rgba(0,0,0,.15);
-    z-index: 999;
-    li{
-        transition: all linear 0.2s;
-        padding: 7px 15px;
-        text-transform: capitalize;
-        display: block;
-        text-align: left;
-        &::after{
-            content: "";
-            width: 0 !important;
-            height: 0 !important;
-        }
-        &:hover{
-            background-color: $darkgray;
-        }
-        a{
-            display: block;
-        }
-    }
-}
-
-// --------dropdown-------------
-
-
-.common__btn{
-    text-transform: capitalize;
-    display: inline-block;
-    padding: 15px 35px;
-    background-color: $green;
-    color: $white;
-    font-weight: 700;
-    border-radius: 5px;
-    transition: all linear 0.2s;
-    &:hover{
-        opacity: 0.7;
-    }
-}
-
-
-
-
-
-
-
-// -----------common css--------
-
+@import "./variable";
+@import "./banner-alt";
 
 // =============sale tag==========
 
@@ -170,26 +52,7 @@ a{
 
 
 
-
-
-
-
-
 // =============sale tag==========
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -213,7 +76,7 @@ a{
                         &:hover .dropdown{
                             opacity: 1;
                             visibility: visible;
-                            top: 25px;
+                            top: 22px;
                         }
                     }
                     li{
@@ -371,6 +234,11 @@ a{
                                 display: inline-block;
 
                                 li{
+                                    &:hover{
+                                        .dropdown{
+                                            top: 25px;
+                                        }
+                                    }
                                     a{
                                         font-size: 14px;
                                         color: $navtext;
@@ -378,8 +246,8 @@ a{
                                         padding:0 20px 0 10px ;
                                     }
                                     .dropdown{
-                                        top: 155px;
-                                        left: 830px;
+                                        top: 10px;
+                                        left: 10px;
                                     }
                                 }
                             }
@@ -1378,7 +1246,7 @@ a{
 // --------------footer part----------------
 
 #footer{
-    padding: 160px 0 400px 0;
+    padding: 160px 0 80px 0;
     background-color: $gray;
     border-top: 1px solid $bordergray;
     .container{
@@ -1486,7 +1354,50 @@ a{
     }
 }
 
+// -------------coppy part-------------
 
+#coppy{
+    padding: 15px 0 20px 0;
+    background-color: $black;
+    .container{
+        .coppy__wrapper{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .coppy__detail{
+                font-size: 16px;
+                color: $darkgray;
+                font-weight: 500;
+                span{
+                    color: $white;
+                    font-weight: 700;
+                }
+            }
+            .coppy__card{
+                ul{
+                    display: flex;
+                    column-gap: 10px;
+                    li{
+                        width: 50px;
+                        background-color: $white;
+                        border-radius: 5px;
+                        padding: 0 3px;
+                        
+                        img{
+                            width: 100%;
+                            filter: grayscale(100%);
+                            transition: all linear 0.2s;
+                            &:hover{
+                                filter: grayscale(0);
+                                cursor: pointer;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
