--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,9 @@ a {
   transition: all linear 0.2s;
 }
 
+#banner_alt {
+  padding-bottom: 100px;
+}
 #banner_alt .banner_alt__menu {
   background-color: #59B210;
 }
@@ -260,6 +263,389 @@ a {
   border-bottom: 10px solid #4d9b0e;
   transition: all linear 0.2s;
   opacity: 0;
+}
+#banner_alt .banner_alt__slider {
+  background-color: #f6f6f6;
+  margin-bottom: 30px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider {
+  position: relative;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider:hover .slick-dots {
+  opacity: 99;
+  visibility: visible;
+  bottom: -20px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 {
+  width: 100%;
+  height: 520px;
+  background: url(../images/banner-slider02.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: right;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail {
+  padding: 75px 0 100px 100px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail h4 {
+  font-size: 50px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 40px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail h2 {
+  font-size: 80px;
+  font-weight: 800;
+  color: #5D5D5D;
+  margin-bottom: 20px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail h5 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 110%;
+  margin-bottom: 10px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail p {
+  font-size: 12px;
+  -moz-columns: #5D5D5D;
+       columns: #5D5D5D;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail .common__btn {
+  text-transform: capitalize;
+  display: inline-block;
+  padding: 15px 35px;
+  background-color: #59B210;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  transition: all linear 0.2s;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_1 .content__detail .common__btn:hover {
+  opacity: 0.7;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 {
+  width: 100%;
+  height: 520px;
+  background: url(../images/banner2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail {
+  padding: 75px 0 100px 100px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail h4 {
+  font-size: 50px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 40px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail h2 {
+  font-size: 80px;
+  font-weight: 800;
+  color: #5D5D5D;
+  margin-bottom: 20px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail h5 {
+  font-size: 28px;
+  font-weight: 400;
+  color: #5D5D5D;
+  text-transform: uppercase;
+  line-height: 110%;
+  margin-bottom: 10px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail p {
+  font-size: 12px;
+  -moz-columns: #5D5D5D;
+       columns: #5D5D5D;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail .common__btn {
+  text-transform: capitalize;
+  display: inline-block;
+  padding: 15px 35px;
+  background-color: #59B210;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  transition: all linear 0.2s;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slider__content_2 .content__detail .common__btn:hover {
+  opacity: 0.7;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slick-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 70px;
+  background-color: #fff;
+  height: 40px;
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+  transition: all linear 0.2s;
+  opacity: 0;
+  visibility: hidden;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slick-dots li {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: rgba(124, 118, 175, 0.652);
+  transition: all linear 0.2s;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slick-dots li:hover {
+  cursor: pointer;
+  background-color: #59B210;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slick-dots li button {
+  display: none;
+}
+#banner_alt .banner_alt__slider .container .row .banner__content .slick__slider .slick-dots .slick-active {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #59B210;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__mobile {
+  width: 100%;
+  position: relative;
+  padding: 50px 30px 50px 30px;
+  text-transform: capitalize;
+  display: block;
+  overflow: hidden;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__mobile:hover img {
+  opacity: 0.9;
+  transform: rotate(-1deg) scale(1.1);
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__mobile h2 {
+  font-weight: 800;
+  color: #4F6276;
+  font-style: 36px;
+  z-index: 22;
+  position: relative;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__mobile h4 {
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 33px;
+  z-index: 22;
+  position: relative;
+  color: #4F6276;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__mobile img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  transition: all linear 0.2s;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__watch {
+  width: 100%;
+  position: relative;
+  padding: 50px 30px 50px 30px;
+  text-transform: capitalize;
+  display: block;
+  overflow: hidden;
+  text-align: right;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__watch:hover img {
+  opacity: 0.9;
+  transform: rotate(1deg) scale(1.1);
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__watch h2 {
+  font-weight: 800;
+  color: #4F6276;
+  font-style: 36px;
+  z-index: 22;
+  position: relative;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__watch h4 {
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 33px;
+  z-index: 22;
+  position: relative;
+  color: #4F6276;
+}
+#banner_alt .banner_alt__main_content .container .row .mobile .banner__watch img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  transition: all linear 0.2s;
+}
+#banner_alt .banner_alt__main_content .container nav {
+  margin-top: 80px;
+}
+#banner_alt .banner_alt__main_content .container nav #nav-tab {
+  gap: 30px;
+  overflow-x: hidden;
+}
+#banner_alt .banner_alt__main_content .container nav #nav-tab .nav-link {
+  background-color: #F9F9F9;
+  padding: 10px 40px;
+  font-size: 20px;
+  color: #5D5D5D;
+  transition: 0.3s;
+  border-radius: 5px 5px 0 0;
+}
+#banner_alt .banner_alt__main_content .container nav #nav-tab .nav-link.active {
+  background-color: #59B210;
+  color: #fff;
+  position: relative;
+  z-index: 11;
+  border-radius: 5px 5px 0 0;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale {
+  position: relative;
+  z-index: 22;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item {
+  padding: 10px 10px 40px 10px;
+  border: 1px solid #dddada;
+  background-color: #fff;
+  position: relative;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item:hover .sale__order {
+  visibility: visible;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__tag {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 4px 30px 4px 20px;
+  border-top: 25px solid #e74c3c;
+  border-right: 15px solid transparent;
+  border-left: 0px;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__tag span {
+  position: absolute;
+  left: 12px;
+  top: -21px;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item img {
+  width: 100%;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__detail {
+  padding: 0 15px;
+  height: 130px;
+  border-bottom: 1px solid #dddada;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__detail h6 {
+  display: inline-block;
+  padding: 0 8px;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 16px;
+  background-color: #59B210;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__detail h4 {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+  color: #0E53A5;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__detail h5 {
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 30px;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__price {
+  display: flex;
+  padding: 20px 15px 0 15px;
+  justify-content: space-between;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__price h2 {
+  display: inline-block;
+  font-size: 14px;
+  color: #777;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__price h3 {
+  font-size: 17px;
+  color: #5D5D5D;
+  display: inline-block;
+  font-weight: 700;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__order {
+  position: absolute;
+  bottom: -97px;
+  width: 100%;
+  left: 0;
+  padding-bottom: 30px;
+  background-color: #fff;
+  border-left: 1px solid #dddada;
+  border-right: 1px solid #dddada;
+  border-bottom: 1px solid #dddada;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-direction: column;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__order div {
+  display: flex;
+  justify-content: center;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__order div a {
+  display: inline-block;
+  transition: 0s;
+}
+#banner_alt .banner_alt__main_content .container .tab-content .row .sale .sale__item .sale__order .price__compare a {
+  font-size: 12px;
+  color: #5D5D5D;
+  display: inline-block;
+  margin-right: 20px;
+}
+#banner_alt .banner_alt__main_content .container .more__products {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
+}
+#banner_alt .banner_alt__main_content .container .more__products .products {
+  display: inline-block;
+}
+#banner_alt .banner_alt__main_content .container .more__products .products a {
+  color: #5D5D5D;
+  display: flex;
+  text-transform: capitalize;
+  align-items: center;
+  transition: all linear 0.3s;
+}
+#banner_alt .banner_alt__main_content .container .more__products .products a:hover {
+  color: #59B210;
+}
+#banner_alt .banner_alt__main_content .container .more__products .products a:hover span {
+  background-color: #59B210;
+  color: #fff;
+}
+#banner_alt .banner_alt__main_content .container .more__products .products a span {
+  padding: 2px 5px;
+  background-color: #dddada;
+  font-size: 12px;
+  border-radius: 4px;
+  margin-right: 10px;
+  transition: all linear 0.3s;
 }
 
 #banner .tab-content .row .sale:nth-child(2) .sale__item .sale__tag {
